<resources>
    <string name="app_name">Mission2</string>
    <string name="tab_category">카테고리</string>
    <string name="tab_snap">스냅</string>
    <string name="tab_home">홈</string>
    <string name="tab_like">좋아요</string>
    <string name="tab_my">마이</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>