<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/tab_category"
        android:icon="@drawable/selector_tab_category"
        android:checked="true"
        android:enabled="true"
        android:title="@string/tab_category"></item>
    <item
        android:id="@+id/tab_snap"
        android:icon="@drawable/selector_tab_snap"
        android:checked="true"
        android:enabled="true"
        android:title="@string/tab_snap"></item>
    <item
        android:id="@+id/tab_home"
        android:icon="@drawable/selector_tab_home"
        android:checked="true"
        android:enabled="true"
        android:title="@string/tab_home"></item>
    <item
        android:id="@+id/tab_like"
        android:icon="@drawable/selector_tab_like"
        android:checked="true"
        android:enabled="true"
        android:title="@string/tab_like"></item>
    <item
        android:id="@+id/tab_my"
        android:icon="@drawable/selector_tab_my"
        android:checked="true"
        android:enabled="true"
        android:title="@string/tab_my"></item>
</menu>